# yanimator

./: .gitignore  Cargo.toml  LICENSE  README.md  json.json  night_walk.pal
.github/workflows/: main.yml
src/: anim_parser.rs  export.rs  import.rs  main.rs  palette_parser.rs  sprite_parser.rs
src/panels/: animation_cells.rs  menu_bar.rs  mod.rs  oams.rs  properties.rs  spritesheet.rs  timeline.rs  topbar.rs  viewport.rs
