[package]
name = "yanimator"
version = "0.2.0"
edition = "2021"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.25", features = ["jpeg", "png"] }
itertools = "0.14.0"
regex = "1.11.1"
rfd = "0.15.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
